resources binding fixed

--- a/src/main/resources/templates/submission.html
+++ b/src/main/resources/templates/submission.html
@@ -13,8 +13,8 @@
           rel="stylesheet">
 
     <!-- CSS & JS Files -->
-    <link rel="stylesheet" href="/css/wave-bsb.css">
-    <script src="/js/submisson.js"></script>
+    <link rel="stylesheet" href="../css/wave-bsb.css">
+    <script src="../js/submisson.js"></script>
 
     <!-- BSB Head -->
 </head>
@@ -29,7 +29,7 @@
          data-bsb-sticky-target="#header">
         <div class="container">
             <a class="navbar-brand" href="submission.html">
-                <img src="/images/branding/over_logo.png" class="bsb-tpl-logo" alt="">
+                <img src="../images/branding/over_logo.png" class="bsb-tpl-logo" alt="">
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -109,8 +109,8 @@
                 </div>
             </div>
             <div class="col-12 col-lg-5 text-center">
-                <img class="img-fluid" loading="lazy" src="/images/hero/over_owner.png" alt=""
-                     style="-webkit-mask-image: url(/images/hero/hero-blob-1.svg); mask-image: url(/images/hero/hero-blob-1.svg);">
+                <img class="img-fluid" loading="lazy" src="../images/hero/over_owner.png" alt=""
+                     style="-webkit-mask-image: url(../images/hero/hero-blob-1.svg); mask-image: url(../images/hero/hero-blob-1.svg);">
             </div>
         </div>
     </div>
@@ -139,7 +139,7 @@
             <div class="row  gx-md-4 gy-lg-0 gx-xxl-5 justify-content-center">
                 <div class="col-11 col-sm-6 col-lg-3">
                     <div class="badge bsb-tpl-bg-yellow text-primary p-3 mb-4">
-                        <img src="/images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
+                        <img src="../images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
                              viewBox="0 0 16 16"/>
                     </div>
                     <h4 class="mb-3">Upload CV in pdf format</h4>
@@ -148,7 +148,7 @@
 
                 <div class="col-11 col-sm-6 col-lg-3">
                     <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4">
-                        <img src="/images/others/tg_logo.png" width="26" height="26">
+                        <img src="../images/others/tg_logo.png" width="26" height="26">
                     </div>
                     <h4 class="mb-3">Enter Your Telegram Nickname</h4>
                     <input type="text" id="tg_name_input_form"/>
