pdf file direct upload from resources

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -14,7 +14,7 @@
 
     <!-- CSS & JS Files -->
     <link rel="stylesheet" href="../css/wave-bsb.css">
-    <link rel="stylesheet" href="../css/custom_style.css">
+    <link rel="stylesheet" href="../css/pricing.css">
     <script src="../js/submisson.js"></script>
 
     <!-- BSB Head -->
