offer getting simplifying

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -159,7 +159,7 @@
                     <div class="col-11 col-sm-6 col-lg-5 offer_checkbox">
                         <input type="checkbox" id="offer_checkbox"
                                onchange="document.getElementById('submit_button').disabled = !this.checked;"/>
-                        <label  class="no-space-break" for="offer_checkbox"><a href="javascript:show_public_offer()">Согласен с договором публичной оферты</a></label>
+                        <label  class="no-space-break" for="offer_checkbox"><a href="../others/resume_review_pferta.pdf">Согласен с договором публичной оферты</a></label>
                     </div>
                     <div class="gy-2 col-lg-1 col-offset-6 centered">
                         <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap"
