change relative paths

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -13,9 +13,9 @@
           rel="stylesheet">
 
     <!-- CSS & JS Files -->
-    <link rel="stylesheet" href="../css/wave-bsb.css">
-    <link rel="stylesheet" href="../css/pricing.css">
-    <script src="../js/submisson.js"></script>
+    <link rel="stylesheet" href="./css/wave-bsb.css">
+    <link rel="stylesheet" href="./css/pricing.css">
+    <script src="./js/submisson.js"></script>
 
     <!-- BSB Head -->
 </head>
@@ -30,7 +30,7 @@
          data-bsb-sticky-target="#header">
         <div class="container">
             <a class="navbar-brand" href="pricing.html">
-                <img src="../images/branding/over_logo.png" class="bsb-tpl-logo" alt="">
+                <img src="./images/branding/over_logo.png" class="bsb-tpl-logo" alt="">
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -110,8 +110,8 @@
                 </div>
             </div>
             <div class="col-12 col-lg-5 text-center">
-                <img class="img-fluid" loading="lazy" src="../images/hero/over_owner.png" alt=""
-                     style="-webkit-mask-image: url(../images/hero/hero-blob-1.svg); mask-image: url(../images/hero/hero-blob-1.svg);">
+                <img class="img-fluid" loading="lazy" src="./images/hero/over_owner.png" alt=""
+                     style="-webkit-mask-image: url(./images/hero/hero-blob-1.svg); mask-image: url(./images/hero/hero-blob-1.svg);">
             </div>
         </div>
     </div>
@@ -140,7 +140,7 @@
             <div class="row  gx-md-4 gy-lg-0 gx-xxl-5 justify-content-center">
                 <div class="col-11 col-sm-6 col-lg-3">
                     <div class="badge bsb-tpl-bg-yellow text-primary p-3 mb-4">
-                        <img src="../images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
+                        <img src="./images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
                              viewBox="0 0 16 16"/>
                     </div>
                     <h4 class="mb-3">Upload CV in pdf format</h4>
@@ -149,7 +149,7 @@
 
                 <div class="col-11 col-sm-6 col-lg-3">
                     <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4">
-                        <img src="../images/others/tg_logo.png" width="26" height="26">
+                        <img src="./images/others/tg_logo.png" width="26" height="26">
                     </div>
                     <h4 class="mb-3">Enter Your Telegram Nickname</h4>
                     <input type="text" id="tg_name_input_form"/>
@@ -159,7 +159,7 @@
                     <div class="col-11 col-sm-6 col-lg-5 offer_checkbox">
                         <input type="checkbox" id="offer_checkbox"
                                onchange="document.getElementById('submit_button').disabled = !this.checked;"/>
-                        <label  class="no-space-break" for="offer_checkbox"><a href="../others/resume_review_pferta.pdf">Согласен с договором публичной оферты</a></label>
+                        <label  class="no-space-break" for="offer_checkbox"><a href="./others/resume_review_pferta.pdf">Согласен с договором публичной оферты</a></label>
                     </div>
                     <div class="gy-2 col-lg-1 col-offset-6 centered">
                         <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap"
