file and info sending to Tg

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -154,6 +154,13 @@
                     <h4 class="mb-3">Enter Your Telegram Nickname</h4>
                     <input type="text" id="tg_name_input_form"/>
                 </div>
+                <div class="col-11 col-sm-6 col-lg-3">
+                    <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4">
+                        <img src="./images/others/ph_logo.png" width="26" height="26">
+                    </div>
+                    <h4 class="mb-3">Enter Your Phone Number</h4>
+                    <input type="text" id="phone_input_form"/>
+                </div>
 
                 <div class="row gx-md-4 gy-lg-0 gx-xxl-5 justify-content-center ">
                     <div class="col-11 col-sm-6 col-lg-5 offer_checkbox">
