mobile phone input form validation

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -167,7 +167,7 @@
                     <h4 class="mb-3">Введите телефон</h4>
                 </div>
                 <div class="col-auto">
-                    <input class="col-sm-auto" type="text" id="phone_input_form"/>
+                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required" placeholder="9012345678" id="phone_input_form"/>
                 </div>
             </div>
             <div class="row align-items-baseline">
@@ -207,7 +207,7 @@
                     <h4 class="mb-3">Введите телефон</h4>
                 </div>
                 <div class="col-auto">
-                    <input class="col-sm-auto" type="text" id="phone_input_form_mentoring"/>
+                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required" placeholder="9012345678" id="phone_input_form_mentoring"/>
                 </div>
             </div>
             <div class="row align-items-baseline">
