--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -156,7 +156,8 @@
                     <h4 class="mb-3">Введите свой ник в Телеграм</h4>
                 </div>
                 <div class="col-auto">
-                    <input class="col-sm-auto" type="text" id="tg_name_input_form"/>
+                    <label for="tg_name_input_form">@</label>
+                    <input class="col-sm-auto" type="text" pattern="^\w+$" required="required" placeholder="username" id="tg_name_input_form"/>
                 </div>
             </div>
             <div class="row align-items-baseline">
@@ -167,7 +168,8 @@
                     <h4 class="mb-3">Введите телефон</h4>
                 </div>
                 <div class="col-auto">
-                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required" placeholder="9012345678" id="phone_input_form"/>
+                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required"
+                           placeholder="9012345678" id="phone_input_form"/>
                 </div>
             </div>
             <div class="row align-items-baseline">
@@ -196,7 +198,8 @@
                     <h4 class="mb-3">Введите свой ник в Телеграм</h4>
                 </div>
                 <div class="col-auto">
-                    <input class="col-sm-auto" type="text" id="tg_name_input_form_mentoring"/>
+                    <label for="tg_name_input_form_mentoring">@</label>
+                    <input class="col-sm-auto" type="text" pattern="^\w+$" required="required" placeholder="username" id="tg_name_input_form_mentoring"/>
                 </div>
             </div>
             <div class="row align-items-baseline">
@@ -207,7 +210,8 @@
                     <h4 class="mb-3">Введите телефон</h4>
                 </div>
                 <div class="col-auto">
-                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required" placeholder="9012345678" id="phone_input_form_mentoring"/>
+                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required"
+                           placeholder="9012345678" id="phone_input_form_mentoring"/>
                 </div>
             </div>
             <div class="row align-items-baseline">
