resume roasting service description added

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -136,6 +136,17 @@
     </section>
     <section id="cvRoasting" class="py-2 py-xl-8 bsb-section-py-xxl-1">
         <div class="container overflow-hidden">
+
+            <div class="row align-items-baseline">
+                <p class="offer-resume-header" >Что предложу:</p>
+                <ul class="offer-list">
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Детальный анализ резюме</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Неограниченное количество итераций: будем вносить исправления и доработки столько раз, сколько потребуется</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Я предложу, как лучше сформулировать твои достижения и навыки</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Накину важных пунктов, от которых можно оттолкнуться, чтобы резюме было более цельным и информативным.</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>С радостью взгляну на каждую обновленную версию резюме и накину еще больше идей для улучшения</li>
+                </ul>
+            </div>
             <div class="row align-items-baseline">
                 <div class="badge bsb-tpl-bg-yellow text-primary p-3 mb-4 col-auto">
                     <img src="./images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
