--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -48,34 +48,34 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul id="bsb-tpl-navbar" class="navbar-nav justify-content-end flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#scrollspyHero" aria-current="page"
-                               data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">В начало</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#scrollSubmissionForm" data-bs-dismiss="offcanvas"
-                               data-bs-target="#offcanvasNavbar">Отправить заявку</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyPortfolio" data-bs-dismiss="offcanvas"
-                               data-bs-target="#offcanvasNavbar">Портфолио</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyAbout" data-bs-dismiss="offcanvas"
-                               data-bs-target="#offcanvasNavbar">О проекте</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyTeam" data-bs-dismiss="offcanvas"
-                               data-bs-target="#offcanvasNavbar">Команда</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyPricing" data-bs-dismiss="offcanvas"
-                               data-bs-target="#offcanvasNavbar">Цены</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyBlog" data-bs-dismiss="offcanvas"
-                               data-bs-target="#offcanvasNavbar">Блог</a>
-                        </li>
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link active" href="#scrollspyHero" aria-current="page"-->
+<!--                               data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">В начало</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#scrollSubmissionForm" data-bs-dismiss="offcanvas"-->
+<!--                               data-bs-target="#offcanvasNavbar">Отправить заявку</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#scrollspyPortfolio" data-bs-dismiss="offcanvas"-->
+<!--                               data-bs-target="#offcanvasNavbar">Портфолио</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#scrollspyAbout" data-bs-dismiss="offcanvas"-->
+<!--                               data-bs-target="#offcanvasNavbar">О проекте</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#scrollspyTeam" data-bs-dismiss="offcanvas"-->
+<!--                               data-bs-target="#offcanvasNavbar">Команда</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#scrollspyPricing" data-bs-dismiss="offcanvas"-->
+<!--                               data-bs-target="#offcanvasNavbar">Цены</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#scrollspyBlog" data-bs-dismiss="offcanvas"-->
+<!--                               data-bs-target="#offcanvasNavbar">Блог</a>-->
+<!--                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="#scrollspyContact" data-bs-dismiss="offcanvas"
                                data-bs-target="#offcanvasNavbar">Контакты</a>
