intermediate changes to promocodes

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -143,7 +143,7 @@
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Детальный анализ резюме</li>
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Неограниченное количество итераций: будем вносить исправления и доработки столько раз, сколько потребуется</li>
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Я предложу, как лучше сформулировать твои достижения и навыки</li>
-                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Накину важных пунктов, от которых можно оттолкнуться, чтобы резюме было более цельным и информативным.</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Накину важных пунктов, от которых можно оттолкнуться, чтобы резюме было более цельным и информативным</li>
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>С радостью взгляну на каждую обновленную версию резюме и накину еще больше идей для улучшения</li>
                 </ul>
             </div>
