--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -29,7 +29,7 @@
          class="navbar navbar-expand-lg bsb-tpl-bg-blue bsb-navbar bsb-navbar-hover bsb-navbar-caret bsb-tpl-navbar-sticky"
          data-bsb-sticky-target="#header">
         <div class="container">
-            <a class="navbar-brand" href="pricing.html">
+            <a class="navbar-brand">
                 <img src="./images/branding/over_logo.png" class="bsb-tpl-logo" alt="">
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
@@ -48,34 +48,34 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul id="bsb-tpl-navbar" class="navbar-nav justify-content-end flex-grow-1">
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link active" href="#scrollspyHero" aria-current="page"-->
-<!--                               data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">В начало</a>-->
-<!--                        </li>-->
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link" href="#scrollSubmissionForm" data-bs-dismiss="offcanvas"-->
-<!--                               data-bs-target="#offcanvasNavbar">Отправить заявку</a>-->
-<!--                        </li>-->
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link" href="#scrollspyPortfolio" data-bs-dismiss="offcanvas"-->
-<!--                               data-bs-target="#offcanvasNavbar">Портфолио</a>-->
-<!--                        </li>-->
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link" href="#scrollspyAbout" data-bs-dismiss="offcanvas"-->
-<!--                               data-bs-target="#offcanvasNavbar">О проекте</a>-->
-<!--                        </li>-->
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link" href="#scrollspyTeam" data-bs-dismiss="offcanvas"-->
-<!--                               data-bs-target="#offcanvasNavbar">Команда</a>-->
-<!--                        </li>-->
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link" href="#scrollspyPricing" data-bs-dismiss="offcanvas"-->
-<!--                               data-bs-target="#offcanvasNavbar">Цены</a>-->
-<!--                        </li>-->
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link" href="#scrollspyBlog" data-bs-dismiss="offcanvas"-->
-<!--                               data-bs-target="#offcanvasNavbar">Блог</a>-->
-<!--                        </li>-->
+                        <!--                        <li class="nav-item">-->
+                        <!--                            <a class="nav-link active" href="#scrollspyHero" aria-current="page"-->
+                        <!--                               data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">В начало</a>-->
+                        <!--                        </li>-->
+                        <!--                        <li class="nav-item">-->
+                        <!--                            <a class="nav-link" href="#scrollSubmissionForm" data-bs-dismiss="offcanvas"-->
+                        <!--                               data-bs-target="#offcanvasNavbar">Отправить заявку</a>-->
+                        <!--                        </li>-->
+                        <!--                        <li class="nav-item">-->
+                        <!--                            <a class="nav-link" href="#scrollspyPortfolio" data-bs-dismiss="offcanvas"-->
+                        <!--                               data-bs-target="#offcanvasNavbar">Портфолио</a>-->
+                        <!--                        </li>-->
+                        <!--                        <li class="nav-item">-->
+                        <!--                            <a class="nav-link" href="#scrollspyAbout" data-bs-dismiss="offcanvas"-->
+                        <!--                               data-bs-target="#offcanvasNavbar">О проекте</a>-->
+                        <!--                        </li>-->
+                        <!--                        <li class="nav-item">-->
+                        <!--                            <a class="nav-link" href="#scrollspyTeam" data-bs-dismiss="offcanvas"-->
+                        <!--                               data-bs-target="#offcanvasNavbar">Команда</a>-->
+                        <!--                        </li>-->
+                        <!--                        <li class="nav-item">-->
+                        <!--                            <a class="nav-link" href="#scrollspyPricing" data-bs-dismiss="offcanvas"-->
+                        <!--                               data-bs-target="#offcanvasNavbar">Цены</a>-->
+                        <!--                        </li>-->
+                        <!--                        <li class="nav-item">-->
+                        <!--                            <a class="nav-link" href="#scrollspyBlog" data-bs-dismiss="offcanvas"-->
+                        <!--                               data-bs-target="#offcanvasNavbar">Блог</a>-->
+                        <!--                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="#scrollspyContact" data-bs-dismiss="offcanvas"
                                data-bs-target="#offcanvasNavbar">Контакты</a>
@@ -136,63 +136,81 @@
     </section>
     <section id="cvRoasting" class="py-2 py-xl-8 bsb-section-py-xxl-1">
         <div class="container overflow-hidden">
-
             <div class="row align-items-baseline">
-                <p class="offer-resume-header" >Что предложу:</p>
+                <p class="offer-resume-header">Что предложу:</p>
                 <ul class="offer-list">
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Детальный анализ резюме</li>
-                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Неограниченное количество итераций: будем вносить исправления и доработки столько раз, сколько потребуется</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Неограниченное количество итераций: будем вносить исправления и
+                        доработки столько раз, сколько потребуется
+                    </li>
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Я предложу, как лучше сформулировать твои достижения и навыки</li>
-                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Накину важных пунктов, от которых можно оттолкнуться, чтобы резюме было более цельным и информативным</li>
-                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>С радостью взгляну на каждую обновленную версию резюме и накину еще больше идей для улучшения</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Накину важных пунктов, от которых можно оттолкнуться, чтобы резюме было
+                        более цельным и информативным
+                    </li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>С радостью взгляну на каждую обновленную версию резюме и накину еще
+                        больше идей для улучшения
+                    </li>
                 </ul>
+                <div class="row align-items-baseline" id="roasting_promocode_input_block">
+                    <div class="col-auto">
+                        <input class="col-sm-auto" type="text" id="roasting_promocode_input"/>
+                        <label for="roasting_promocode_input">Ввести промокод</label>
+                    </div>
+                    <div class="col-auto">
+                        <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="roastingPromocodePricing()">Рассчитать стоимость с учетом промокода</button>
+                    </div>
+                </div>
+
             </div>
-            <div class="row align-items-baseline">
-                <div class="badge bsb-tpl-bg-yellow text-primary p-3 mb-4 col-auto">
-                    <img src="./images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
-                         viewBox="0 0 16 16"/>
+            <div id="CVRoastingBlock" style="visibility: collapse">
+                <div class="row align-items-baseline">
+                    <div class="badge bsb-tpl-bg-yellow text-primary p-3 mb-4 col-auto">
+                        <img src="./images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
+                             viewBox="0 0 16 16"/>
+                    </div>
+                    <div class="col-auto">
+                        <h4 class="mb-3">Загрузите резюме в PDF формате</h4>
+                    </div>
+                    <div class="col-auto">
+                        <input type="file" id="pdf_input_form"/>
+                    </div>
                 </div>
-                <div class="col-auto">
-                    <h4 class="mb-3">Загрузите резюме в PDF формате</h4>
+                <div class="row align-items-baseline">
+                    <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4 col-auto">
+                        <img src="./images/others/tg_logo.png" width="26" height="26">
+                    </div>
+                    <div class="col-auto">
+                        <h4 class="mb-3">Введите свой ник в Телеграм</h4>
+                    </div>
+                    <div class="col-auto">
+                        <label for="tg_name_input_form">@</label>
+                        <input class="col-sm-auto" type="text" pattern="^\w+$" required="required" placeholder="username" id="tg_name_input_form"/>
+                    </div>
                 </div>
-                <div class="col-auto">
-                    <input type="file" id="pdf_input_form"/>
+                <div class="row align-items-baseline">
+                    <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4 col-auto">
+                        <img src="./images/others/ph_logo.png" width="26" height="26">
+                    </div>
+                    <div class="col-auto">
+                        <h4 class="mb-3">Введите телефон</h4>
+                    </div>
+                    <div class="col-auto">
+                        <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required"
+                               placeholder="9012345678" id="phone_input_form"/>
+                    </div>
+                </div>
+                <div class="row align-items-baseline">
+                    <div class="col-auto offer_checkbox">
+                        <input type="checkbox" id="offer_checkbox" onchange="document.getElementById('submit_button').disabled = !this.checked;"/>
+                        <label class="no-space-break" for="offer_checkbox"><a href="./others/resume_review_pferta.pdf">Согласен с договором публичной оферты</a></label>
+                    </div>
+                    <div class="col-auto">
+                        <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="submit_new_client_cv_roasting()" id="submit_button" disabled="disabled">
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="row align-items-baseline">
-                <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4 col-auto">
-                    <img src="./images/others/tg_logo.png" width="26" height="26">
-                </div>
-                <div class="col-auto">
-                    <h4 class="mb-3">Введите свой ник в Телеграм</h4>
-                </div>
-                <div class="col-auto">
-                    <label for="tg_name_input_form">@</label>
-                    <input class="col-sm-auto" type="text" pattern="^\w+$" required="required" placeholder="username" id="tg_name_input_form"/>
-                </div>
-            </div>
-            <div class="row align-items-baseline">
-                <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4 col-auto">
-                    <img src="./images/others/ph_logo.png" width="26" height="26">
-                </div>
-                <div class="col-auto">
-                    <h4 class="mb-3">Введите телефон</h4>
-                </div>
-                <div class="col-auto">
-                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required"
-                           placeholder="9012345678" id="phone_input_form"/>
-                </div>
-            </div>
-            <div class="row align-items-baseline">
-                <div class="col-auto offer_checkbox">
-                    <input type="checkbox" id="offer_checkbox" onchange="document.getElementById('submit_button').disabled = !this.checked;"/>
-                    <label class="no-space-break" for="offer_checkbox"><a href="./others/resume_review_pferta.pdf">Согласен с договором публичной оферты</a></label>
-                </div>
-                <div class="col-auto">
-                    <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="submit_new_client()" id="submit_button" disabled="disabled">
-                    </button>
-                </div>
-            </div>
+
         </div>
     </section>
     <br>
