--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -9,39 +9,29 @@
     <!-- Google Fonts Files -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Satisfy&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
 
     <!-- CSS & JS Files -->
     <link rel="stylesheet" href="./css/wave-bsb.css">
     <link rel="stylesheet" href="./css/pricing.css">
-    <script src="./js/submisson.js"></script>
-
-    <!-- BSB Head -->
+    <script src="./js/pricing.js"></script>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#bsb-tpl-navbar" data-bs-smooth-scroll="true" tabindex="0">
 <!-- Header -->
 <header id="header" class="sticky-top bsb-tpl-header-sticky bsb-tpl-header-sticky-animationX">
-
     <!-- Navbar 1 - Bootstrap Brain Component -->
-    <nav id="scrollspyNav"
-         class="navbar navbar-expand-lg bsb-tpl-bg-blue bsb-navbar bsb-navbar-hover bsb-navbar-caret bsb-tpl-navbar-sticky"
-         data-bsb-sticky-target="#header">
+    <nav id="scrollspyNav" class="navbar navbar-expand-lg bsb-tpl-bg-blue bsb-navbar bsb-navbar-hover bsb-navbar-caret bsb-tpl-navbar-sticky" data-bsb-sticky-target="#header">
         <div class="container">
             <a class="navbar-brand">
                 <img src="./images/branding/over_logo.png" class="bsb-tpl-logo" alt="">
             </a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list"
-                     viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                          d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                 </svg>
             </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                 aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Меню</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -77,8 +67,7 @@
                         <!--                               data-bs-target="#offcanvasNavbar">Блог</a>-->
                         <!--                        </li>-->
                         <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyContact" data-bs-dismiss="offcanvas"
-                               data-bs-target="#offcanvasNavbar">Контакты</a>
+                            <a class="nav-link" href="#scrollspyContact" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">Контакты</a>
                         </li>
                     </ul>
                 </div>
@@ -94,22 +83,19 @@
         <div class="row gy-3 gy-lg-0 align-items-lg-center justify-content-lg-between">
             <div class="col-12 col-lg-6 order-1 order-lg-0">
                 <h1 class="display-3 fw-bolder mb-3">Я предоставляю простые <br>
-                    <mark class="bsb-tpl-highlight bsb-tpl-highlight-blue"><span
-                            class="bsb-tpl-font-hw display-2 text-accent fw-normal">решения</span></mark>
+                    <mark class="bsb-tpl-highlight bsb-tpl-highlight-blue">
+                        <span class="bsb-tpl-font-hw display-2 text-accent fw-normal">решения</span>
+                    </mark>
                     для каждого по доступным ценам.
                 </h1>
-                <p class="fs-4 mb-5">Мои методы выверены, целенаправленны и поэтому обеспечивают устойчивый
-                    прогресс.</p>
+                <p class="fs-4 mb-5">Мои методы выверены, целенаправленны и поэтому обеспечивают устойчивый прогресс.</p>
                 <div class="d-grid gap-2 d-sm-flex">
-                    <button type="button" class="btn btn-primary bsb-btn-3xl rounded-pill" onclick="location.href='#cvRoasting';">Прожарка резюме
-                    </button>
-                    <button type="button" class="btn btn-primary bsb-btn-3xl rounded-pill" onclick="location.href='#mentoringSubscription';">Подписка на менторинг
-                    </button>
+                    <button type="button" class="btn btn-primary bsb-btn-3xl rounded-pill" onclick="location.href='#cvRoasting';">Прожарка резюме</button>
+                    <button type="button" class="btn btn-primary bsb-btn-3xl rounded-pill" onclick="location.href='#mentoringSubscription';">Подписка на менторинг</button>
                 </div>
             </div>
             <div class="col-12 col-lg-5 text-center">
-                <img class="img-fluid" loading="lazy" src="./images/hero/over_owner.png" alt=""
-                     style="-webkit-mask-image: url(./images/hero/hero-blob-1.svg); mask-image: url(./images/hero/hero-blob-1.svg);">
+                <img class="img-fluid" loading="lazy" src="./images/hero/over_owner.png" alt="" style="-webkit-mask-image: url(./images/hero/hero-blob-1.svg); mask-image: url(./images/hero/hero-blob-1.svg);">
             </div>
         </div>
     </div>
@@ -117,7 +103,6 @@
 
 <!-- Main -->
 <main id="main">
-
     <!-- Section - Services -->
     <!-- Service 3 - Bootstrap Brain Component -->
     <section id="scrollSubmissionForm" class="py-2 py-xl-8 bsb-section-py-xxl-1">
@@ -125,8 +110,8 @@
             <div class="row justify-content-md-center">
                 <div class="col-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7 text-center">
                     <h2 class="display-3 fw-bolder mb-4">Предоставьте <br>
-                        <mark class="bsb-tpl-highlight bsb-tpl-highlight-yellow"><span
-                                class="bsb-tpl-font-hw display-1 text-accent fw-normal">Телеграм ник, телефон (и) загрузите резюме</span>
+                        <mark class="bsb-tpl-highlight bsb-tpl-highlight-yellow">
+                            <span class="bsb-tpl-font-hw display-1 text-accent fw-normal">Телеграм ник, телефон (и) загрузите резюме</span>
                         </mark>
                         для доступа к нашим сервисам.
                     </h2>
@@ -140,16 +125,10 @@
                 <p class="offer-resume-header">Что предложу:</p>
                 <ul class="offer-list">
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Детальный анализ резюме</li>
-                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Неограниченное количество итераций: будем вносить исправления и
-                        доработки столько раз, сколько потребуется
-                    </li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Неограниченное количество итераций: будем вносить исправления и доработки столько раз, сколько потребуется</li>
                     <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Я предложу, как лучше сформулировать твои достижения и навыки</li>
-                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Накину важных пунктов, от которых можно оттолкнуться, чтобы резюме было
-                        более цельным и информативным
-                    </li>
-                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>С радостью взгляну на каждую обновленную версию резюме и накину еще
-                        больше идей для улучшения
-                    </li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>Накину важных пунктов, от которых можно оттолкнуться, чтобы резюме было более цельным и информативным</li>
+                    <li><span class="marker" style="content: url('./images/branding/over_logo.png');"></span>С радостью взгляну на каждую обновленную версию резюме и накину еще больше идей для улучшения</li>
                 </ul>
                 <div class="row align-items-baseline" id="roasting_promocode_input_block">
                     <div class="col-auto">
@@ -160,13 +139,11 @@
                         <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="roastingPromocodePricing()">Рассчитать стоимость с учетом промокода</button>
                     </div>
                 </div>
-
             </div>
             <div id="CVRoastingBlock">
                 <div class="row align-items-baseline">
                     <div class="badge bsb-tpl-bg-yellow text-primary p-3 mb-4 col-auto">
-                        <img src="./images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart"
-                             viewBox="0 0 16 16"/>
+                        <img src="./images/others/cv_logo.png" width="26" height="26" class="bi bi-pie-chart" viewBox="0 0 16 16"/>
                     </div>
                     <div class="col-auto">
                         <h4 class="mb-3">Загрузите резюме в PDF формате</h4>
@@ -195,8 +172,7 @@
                         <h4 class="mb-3">Введите телефон</h4>
                     </div>
                     <div class="col-auto">
-                        <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required"
-                               placeholder="9012345678" id="phone_input_form"/>
+                        <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required" placeholder="9012345678" id="phone_input_form"/>
                     </div>
                 </div>
                 <div class="row align-items-baseline">
@@ -205,12 +181,10 @@
                         <label class="no-space-break" for="offer_checkbox"><a href="./others/resume_review_pferta.pdf">Согласен с договором публичной оферты</a></label>
                     </div>
                     <div class="col-auto">
-                        <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="submit_new_client_cv_roasting()" id="submit_button_roasting" disabled="disabled">
-                        </button>
+                        <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="submit_new_client_cv_roasting()" id="submit_button_roasting" disabled="disabled"></button>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
     <br>
@@ -239,20 +213,16 @@
                     <h4 class="mb-3">Введите телефон</h4>
                 </div>
                 <div class="col-auto">
-                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required"
-                           placeholder="9012345678" id="phone_input_form_mentoring"/>
+                    <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required" placeholder="9012345678" id="phone_input_form_mentoring"/>
                 </div>
             </div>
             <div class="row align-items-baseline">
                 <div class="col-auto offer_checkbox">
-                    <input type="checkbox" id="offer_checkbox_mentoring"
-                           onchange="document.getElementById('submit_button_mentoring').disabled = !this.checked;"/>
+                    <input type="checkbox" id="offer_checkbox_mentoring" onchange="document.getElementById('submit_button_mentoring').disabled = !this.checked;"/>
                     <label class="no-space-break" for="offer_checkbox"><a href="./others/mentoring_subscription_pferta.pdf">Согласен с договором публичной оферты</a></label>
                 </div>
                 <div class="col-auto">
-                    <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="submit_new_client_mentoringSubscription()" id="submit_button_mentoring"
-                            disabled="disabled">
-                    </button>
+                    <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="submit_new_client_mentoringSubscription()" id="submit_button_mentoring" disabled="disabled"></button>
                 </div>
             </div>
         </div>
@@ -262,7 +232,6 @@
     <br>
     <br>
     <section>
-
     </section>
 </body>
 </html>
