--- a/src/main/resources/templates/promocode_panel.html
+++ b/src/main/resources/templates/promocode_panel.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 <div>
+    <form method="POST" action="/logout">
+        <input type="submit" value="LOGOUT"/>
+    </form>
+</div>
+<div>
     <p>Список всех промокодов</p>
     <table>
         <thead>
