custom login page

--- a/src/main/resources/templates/promocode_panel.html
+++ b/src/main/resources/templates/promocode_panel.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-    <form method="POST" action="/logout">
+    <form method="POST" action="./logout">
         <input type="submit" value="LOGOUT"/>
     </form>
 </div>
