service type added

--- a/src/main/resources/templates/promocode_panel.html
+++ b/src/main/resources/templates/promocode_panel.html
@@ -23,6 +23,7 @@
             <th>Создан</th>
             <th>Список транзакций LifePay</th>
             <th>Активен</th>
+            <th>Услуга</th>
             <th>Удалить</th>
         </tr>
         </thead>
@@ -39,6 +40,7 @@
             <th>Размер скидки в %</th>
             <th>Количество использований</th>
             <th>Активен</th>
+            <th>Тип услуги</th>
         </tr>
         </thead>
         <tbody>
@@ -47,6 +49,7 @@
             <td><input type="number" required="required" id="discountPercent"></td>
             <td><input type="number" required="required" id="maxUsesNumber"></td>
             <td><input type="checkbox" id="isActive"></td>
+            <td><select id="serviceType"></select></td>
         </tr>
         </tbody>
     </table>
