--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -132,11 +132,11 @@
                 </ul>
                 <div class="row align-items-baseline" id="roasting_promocode_input_block">
                     <div class="col-auto">
-                        <input class="col-sm-auto" type="text" id="roasting_promocode_input"/>
+                        <input class="col-sm-auto" type="text" id="roasting_promocode_input" placeholder="промокод"/>
                         <label for="roasting_promocode_input"></label>
                     </div>
                     <div class="col-auto">
-                        <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="roastingPromocodePricing()">Рассчитать стоимость с учетом промокода</button>
+                        <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="roastingPromocodePricing()">Применить</button>
                     </div>
                 </div>
             </div>
@@ -172,6 +172,7 @@
                         <h4 class="mb-3">Введите телефон</h4>
                     </div>
                     <div class="col-auto">
+                        <label for="phone_input_form">+7</label>
                         <input class="col-sm-auto" type="tel" pattern="[\+]?[\(]?[0-9]{0,3}[\)]?[\-\s\.\(]?[9]{1}[0-9]{2}[\-\s\.\)]?[0-9]{3}[\-\s\.]?[0-9]{4}" required="required" placeholder="9012345678" id="phone_input_form"/>
                     </div>
                 </div>
