promocode functionality added to mentoring

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -195,6 +195,15 @@
     <section id="mentoringSubscription" class="py-2 py-xl-8 bsb-section-py-xxl-1">
         <div class="container overflow-hidden">
             <div class="row align-items-baseline">
+                <div class="row align-items-baseline" id="mentoring_promocode_input_block">
+                    <div class="col-auto">
+                        <input class="col-sm-auto" type="text" id="mentoring_promocode_input" placeholder="промокод"/>
+                        <label for="mentoring_promocode_input"></label>
+                    </div>
+                    <div class="col-auto">
+                        <button class="btn btn-accent bsb-btn-3xl rounded mb-0 text-nowrap" onclick="mentoringPromocodePricing()">Применить</button>
+                    </div>
+                </div>
                 <div class="badge bsb-tpl-bg-green text-primary p-3 mb-4 col-auto">
                     <img src="./images/others/tg_logo.png" width="26" height="26">
                 </div>
