Transfer review endpoint from twitch bot

--- a/src/main/resources/templates/incomingReviewWidget.html
+++ b/src/main/resources/templates/incomingReviewWidget.html
@@ -13,10 +13,9 @@
 </head>
 <body>
 <div class="container fs-5">
-    <table class="table bg-transparent table-borderless text-white text-bold">
+    <table class="table bg-transparent table-borderless" style="-webkit-text-stroke: 1px black; font-weight: bold">
         <tbody id="tableBody">
         </tbody>
-
     </table>
 </div>
 
