CV Roast for new frontend.

--- a/src/main/resources/templates/pricingV2.html
+++ b/src/main/resources/templates/pricingV2.html
@@ -202,7 +202,7 @@
                         <input type="checkbox" id="contract" class="field__input" required />
                         <label for="contract" class="field field__check"></label>
                         <label for="contract" class="field__label">
-                            <a href="./others/resume_review_pferta.pdf"
+                            <a href=""
                                target="_blank">Согласен с договором публичной оферты</a></label>
                     </div>
                     <div class="field field_checkbox">
