--- a/src/main/resources/templates/pricingV2.html
+++ b/src/main/resources/templates/pricingV2.html
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="form__footer">
-                <button class="button">оплатить</button>
+                <button class="button" id="pay-button">оплатить</button>
             </div>
         </form>
     </div>
