--- a/src/main/resources/templates/pricingV2.html
+++ b/src/main/resources/templates/pricingV2.html
@@ -43,7 +43,7 @@
             Прокладываю дорогу к высокооплачиваемой работе и помогаю строить карьеру
         </h2>
         <ul class="greetings__tags">
-            <li class="greetings__tags__item" id="resume-button">Прожарка резюме</li>
+            <li class="greetings__tags__item" id="resume-button">Апгрейд резюме</li>
             <li class="greetings__tags__item" id="mentoring-button">Менторинг</li>
             <li class="greetings__tags__item" id="call-button">Личный созвон</li>
         </ul>
