Promocode local storage fix

--- a/src/main/resources/templates/pricingV2.html
+++ b/src/main/resources/templates/pricingV2.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="field">
                     <label class="field__label" for="tg">Ник в telegram</label>
-                    <input class="field__input" type="text" id="tg" placeholder="@blabla" required />
+                    <input class="field__input" type="text" id="tg" placeholder="blabla" required />
                 </div>
                 <div class="field">
                     <label class="field__label" for="promo">Промокод</label>
