Personal call request added.

--- a/src/main/resources/templates/pricingV2.html
+++ b/src/main/resources/templates/pricingV2.html
@@ -132,7 +132,7 @@
                 <li class="info__block__list__item">Приватно, без стрима</li>
             </ul>
             <div class="info__block__footer">
-                <span class="info__block__footer__price"> 10 000 руб </span>
+                <span class="info__block__footer__price" id="call_price"></span>
                 <a class="button" id="show-call-button">оплатить</a>
             </div>
         </div>
