Добавил legal доки на созвон и обработку персональных данных и ссылки на них. Реализовал очистку формы оплаты.

--- a/src/main/resources/templates/pricingV2.html
+++ b/src/main/resources/templates/pricingV2.html
@@ -84,7 +84,7 @@
                 <li class="info__block__list__item">Индивидуальный подход</li>
                 <li class="info__block__list__item">Теория и практика: Темы, которые нужны лично вам</li>
                 <li class="info__block__list__item">
-                    Подходит для всех уровней. Уже освоили теорию, но не хватает практики? Вас ждет участие в
+                    Подходит для всех уровней. Уже освоили теорию, но не хватает практики?<br> Вас ждет участие в
                     реальных проектах в команде и углубленное изучение специфических тем
                 </li>
                 <li class="info__block__list__item">Подготовка к собеседованиям</li>
@@ -192,7 +192,7 @@
                 <div class="field field_pdf">
                     <label class="field__label" for="pdf">Резюме в PDF</label>
                     <div class="row">
-                        <label class="field__input" for="pdf" id="pdf-label">выберите файл</label>
+                        <label class="field__input" for="pdf" id="pdf-label">твой pdf</label>
                         <div class="close close_dark" id="clear-input"></div>
                     </div>
                     <input class="field__input" type="file" accept="application/pdf" id="pdf" required />
@@ -208,9 +208,9 @@
                     <div class="field field_checkbox">
                         <input type="checkbox" id="personal-data" class="field__input" required />
                         <label for="personal-data" class="field field__check"></label>
-                        <label for="personal-data" class="field__label"
-                        >Согласен на обработку персональных данных</label
-                        >
+                        <label for="personal-data" class="field__label">
+                            <a href="./others/personal_data_policy.pdf" target="_blank">Согласен на обработку персональных данных</a>
+                        </label>
                     </div>
                 </div>
             </div>
