Превью для социальных сетей.

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- HTML Meta Tags -->
     <title>Overridetech</title>
+    <meta name="description" content="Менторинг, прожарка резюме, кодинг. Аллоха, меня зовут Толя. Превращаю людей в разработчиков, а разработчиков в людей. Overridetech">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://overridetech.ru">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Overridetech">
+    <meta property="og:description" content="Менторинг, прожарка резюме, кодинг. Аллоха, меня зовут Толя. Превращаю людей в разработчиков, а разработчиков в людей. Overridetech">
+    <meta property="og:image" content=content="./assets/preview.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="overridetech.ru">
+    <meta property="twitter:url" content="https://overridetech.ru">
+    <meta name="twitter:title" content="Overridetech">
+    <meta name="twitter:description" content="Менторинг, прожарка резюме, кодинг. Аллоха, меня зовут Толя. Превращаю людей в разработчиков, а разработчиков в людей. Overridetech">
+    <meta name="twitter:image" content="./assets/preview.png">
+
     <link rel="stylesheet" href="./css/pricing.css" />
     <link type="image/x-icon" href="./assets/favicon.png" rel="shortcut icon" />
     <meta
