Браузер Safari не отрабатывал функцию .focus() при перенаправлении на страницу СБП. Решено: 1) редирект на страницу СБП с помощью атрибута "_blank" 2) на popup оплаты внедрено уведомление о необходимости отключения блокировки всплывающих окон при использовании Safari со ссылкой на эппловский саппорт.

--- a/src/main/resources/static/css/pricing.css
+++ b/src/main/resources/static/css/pricing.css
@@ -544,6 +544,12 @@ a {
     text-transform: capitalize;
 }
 
+.form__footer__note {
+    font-size: 14px;
+    color: aliceblue;
+    margin-top: 10px;
+}
+
 @media (max-width: 1200px) {
     .first-block .first-block__title {
         width: 378px;
