--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -236,6 +236,12 @@
             <div class="form__footer">
                 <button class="button" id="pay-button">оплатить</button>
             </div>
+            <div class="form__footer__note">
+                Если Вы используете браузер Safari, то перед оплатой убедитесь,
+                что <a href="https://support.apple.com/ru-ru/102524" target="_blank">
+                <strong>отключена блокировка всплывающих окон</strong></a>.
+                Это необходимо для перехода на странцу СБП и последующей оплаты.
+            </div>
         </form>
     </div>
 </section>
