--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -213,7 +213,7 @@
         <span class="footer__rights">
             ИП Марандюк Анатолий Викторович<br/>
             ИНН: 773583566764<br/> 
-            E-mail: shamaneeel881@gmail.com
+            E-mail: anatolii.marandyuk@gmail.com
         </span>
         <span>
             *Facebook/Instagram — проект Meta Platforms Inc., деятельность которой в России запрещена
