--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </div>
-    <div class="info">
+<!--     <div class="info">
         <h2 class="info__title">МЕНТОРИНГ С ПОСТОПЛАТОЙ</h2>
         <h6 class="info__subtitle">> С нуля до модного джава девелопера</h6>
         <div class="info__block">
@@ -170,7 +170,7 @@
                 <a class="button" href="https://t.me/overrideTech" target="_blank">TG</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="info" id="call">
         <h2 class="info__title">ПЕРСОНАЛЬНЫЙ СОЗВОН</h2>
         <h6 class="info__subtitle">> Любые темы, которые волнуют</h6>
